# plata

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README  README.rst  django  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: Makefile  README  conf.py  contracts.txt  discounts.txt  examples.txt  index.txt  installation.txt  migrations.txt  overview.txt  payment.txt  products.txt  requirements.txt  settings.txt  shipping.txt  shop.txt  taxes.txt  taxes_and_discounts.txt
docs/api/: contextprocessors.txt  core.txt  discounts.txt  fields.txt  payment.txt  products.txt  reporting.txt  settings.txt  shipping.txt  shop.txt  utils.txt  views.txt
docs/releases/: 1.1.txt  1.2.txt
example/: models.py  settings.py  urls.py  views.py
example/fixtures/: contact.json  product.json  shop.json  stock.json
examples/: manage.py  reset-migrations.sh  startexample.sh
examples/custom/: admin.py  models.py  old_settings.py  settings.py  urls.py  views.py  wsgi.py
examples/generic/: admin.py  models.py  settings.py  urls.py  views.py  wsgi.py
examples/oneprice/: admin.py  models.py  settings.py  urls.py  views.py  wsgi.py
examples/options/: manage.py  models.py  settings.py  urls.py  views.py
examples/simple/: admin.py  models.py  old_settings.py  settings.py  urls.py  views.py
examples/staggered/: admin.py  models.py  settings.py  urls.py  views.py  wsgi.py
pasta/: __init__.py  default_settings.py  settings.py  urls.py
pasta/contact/: admin.py  models.py
pasta/discount/: models.py
pasta/product/: admin.py  models.py
pasta/shop/: __init__.py  admin.py  models.py  tests.py
plata/: __init__.py  compat.py  context_processors.py  default_settings.py  fields.py  models.py  settings.py  tests.py  urls.py  utils.py
plata/contact/: admin.py  forms.py  models.py
plata/discount/: admin.py  configs.py  models.py
plata/product/: __init__.py  abstract.py  admin.py  models.py
plata/reporting/: notifications.py  order.py  pdfdocument.py  product.py  urls.py  utils.py  views.py
plata/shipping/: admin.py  models.py
plata/shop/: __init__.py  actions.py  admin.py  forms.py  ga_tracking.py  models.py  notifications.py  processors.py  (+4 more)
tests/: cov.sh  manage.py  requirements.pip  requirements.txt  tox.ini
(+142 files in other folders)
